<resources>
    <string name="app_name">Pets</string>

    <!--pets-->
    <string name="pet_name">Имя питомца</string>
    <string name="pet_type">Вид питомца</string>
    <string name="pet_sex">Пол</string>
    <string name="pet_sex_male">Мужской</string>
    <string name="pet_sex_female">Женский</string>
    <string name="pet_birth_day">Дата рождения</string>
    <string name="pet_birth_day_year">Год</string>
    <string name="pet_birth_day_month">Месяц</string>
    <string name="pet_button_create">Создать</string>
    <string name="pet_button_save">Сохранить</string>
    <string name="pet_button_delete">Удалить</string>
    <string name="pet_error">Необходимо заполнить имя питомца!</string>

    <!--event-->
    <string name="event_new_title">Новое событие</string>
    <string name="event_edit_title">Редактирование события</string>
    <string name="event_name">Событие</string>
    <string name="event_date">Дата</string>
    <string name="event_repeat_mode">Повтор</string>
    <string name="event_notification">Уведомление</string>
    <string name="event_notification_on">Включить уведомление</string>
    <string name="event_time">Время уведомления</string>
    <string name="event_button_create">Создать</string>
    <string name="event_button_save">Сохранить</string>

    <!--edit_event-->
    <string name="edit_event_edit">Редактировать</string>
    <string name="edit_event_delete">Удалить</string>

    <!--options-->
    <string name="options_toolbar_title">Параметры</string>
    <string name="options_edit_pet">Редактировать питомца</string>
    <string name="options_change_pet">Сменить питомца</string>
    <string name="options_interview">Опрос</string>
    <string name="options_statistic">Статистика</string>

    <!--change_pet-->
    <string name="change_pet_add">Добавить нового</string>

    <!--interview-->
    <string name="interview_toolbar_title">Ежедневный опрос</string>
    <string name="interview_pet_icon_label">Оцените настроение вашего питомца</string>
    <string name="interview_footer">Проходите опрос каждый день для полчения статистики в конце месяца</string>
    <string name="interview_save">Ваша оценка сохранена \nВы можете изменить оценку</string>

    <!--statistic-->
    <string name="statistic_toolbar_title">Статистика</string>
    <string name="statistic_empty_data">Нет данных для построения статистики</string>

    <!--date_picker-->
    <string name="date_picker_select_date">Выберите дату</string>
    <string name="date_picker_throw_off">Сбросить</string>
    <string name="date_picker_to_apply">Применить</string>

    <!--time_picker-->
    <string name="time_picker_select_time">Выберите время</string>
    <string name="time_picker_throw_off">Сбросить</string>
    <string name="time_picker_to_apply">Применить</string>

    <!--notification-->
    <string name="notification_channel_id">fcm_default_channel</string>
    <string name="notification_channel_name">События</string>
</resources>