<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:orientation="vertical">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/avatarImageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/ic_photo_placeholder"
            app:shapeAppearanceOverlay="@style/CircleImageView"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameTextInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/pet_name"
            android:theme="@style/TextInputLayout"
            app:endIconMode="clear_text"
            app:endIconTint="@color/colorIconLight">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameTextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextPrimary" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/typeTextInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:hint="@string/pet_type"
            android:theme="@style/TextInputLayout"
            app:endIconMode="dropdown_menu"
            app:endIconTint="@color/colorIconLight"
            app:boxBackgroundColor="@android:color/white">

            <AutoCompleteTextView
                android:id="@+id/typeTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextPrimary"
                android:inputType="none"
                android:focusable="false"
                android:cursorVisible="false"
                android:focusableInTouchMode="false"
                tools:ignore="LabelFor" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/sexTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:textSize="@dimen/font_few_big"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:text="@string/pet_sex" />

            <RadioGroup
                android:id="@+id/sexRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/maleRadioButton"
                    android:theme="@style/RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/pet_sex_male"/>

                <RadioButton
                    android:id="@+id/femaleRadioButton"
                    android:theme="@style/RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/pet_sex_female"/>
            </RadioGroup>
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/birthDayTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:textSize="@dimen/font_few_big"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:text="@string/pet_birth_day"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/yearTextInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:orientation="horizontal"
                android:hint="@string/pet_birth_day_year"
                android:theme="@style/TextInputLayout"
                app:endIconMode="dropdown_menu"
                app:endIconTint="@color/colorIconLight"
                app:layout_constraintEnd_toStartOf="@id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/birthDayTitleTextView"
                app:boxBackgroundColor="@android:color/white">

                <AutoCompleteTextView
                    android:id="@+id/yearTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorTextPrimary"
                    android:inputType="none"
                    android:focusable="false"
                    android:cursorVisible="false"
                    tools:ignore="LabelFor" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/monthTextInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:orientation="horizontal"
                android:hint="@string/pet_birth_day_month"
                android:theme="@style/TextInputLayout"
                app:endIconMode="dropdown_menu"
                app:endIconTint="@color/colorIconLight"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@id/birthDayTitleTextView"
                app:boxBackgroundColor="@android:color/white">

                <AutoCompleteTextView
                    android:id="@+id/monthTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorTextPrimary"
                    android:inputType="none"
                    android:focusable="false"
                    android:cursorVisible="false"
                    tools:ignore="LabelFor" />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <abdulmanov.eduard.pets.presentation._common.view.ProgressButton
                android:id="@+id/deleteProgressButton"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/bg_button_ripple_normal"
                android:layout_weight="0.5"
                app:text="@string/pet_button_delete"/>

            <abdulmanov.eduard.pets.presentation._common.view.ProgressButton
                android:id="@+id/applyProgressButton"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:background="@drawable/bg_button_ripple_active"
                android:layout_weight="0.5"/>

        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>