<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/selectedTimeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="@dimen/font_few_big"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:text="@string/time_picker_select_time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TimePicker
        android:theme="@style/TimePickerStyle"
        android:id="@+id/timePicker"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:timePickerMode="spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/selectedTimeTextView" />

    <View
        android:id="@+id/horizontalSeparate"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timePicker" />

    <View
        android:id="@+id/verticalSeparate"
        android:layout_width="1dp"
        android:layout_height="30dp"
        android:background="@android:color/white"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/horizontalSeparate"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/throwOffTextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textSize="@dimen/font_small"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:text="@string/time_picker_throw_off"
        android:gravity="center"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/verticalSeparate"
        app:layout_constraintTop_toBottomOf="@id/horizontalSeparate"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/applyTextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textSize="@dimen/font_small"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:text="@string/time_picker_to_apply"
        android:gravity="center"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/verticalSeparate"
        app:layout_constraintTop_toBottomOf="@id/horizontalSeparate"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>